--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@craco/craco": "^5.6.4",
     "@okta/okta-react": "^3.0.2",
     "@okta/okta-signin-widget": "^4.1.2",
+    "@reduxjs/toolkit": "^1.4.0",
     "antd": "^4.4.3",
     "axios": "^0.19.2",
     "craco-less": "^1.17.0",
