--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.7.0",
     "axios": "^0.19.2",
     "craco-less": "^1.17.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
