--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -90,6 +91,7 @@
     "jest-prop-type-error": "^1.1.0",
     "lint-staged": "^10.4.0",
     "prettier-eslint-cli": "^5.0.0",
-    "redux-devtools": "^3.7.0"
+    "redux-devtools": "^3.7.0",
+    "redux-store": "0.0.0"
   }
 }
