--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.7.0",
     "axios": "^0.19.2",
     "craco-less": "^1.17.0",
+    "flatpickr": "^4.6.6",
     "immer": "^7.0.9",
     "mapbox-gl": "^1.12.0",
     "moment": "^2.29.1",
